# nova-powervm

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  tox.ini
ceilometer_powervm/: version.py
ceilometer_powervm/locale/: ceilometer-powervm-log-critical.pot  ceilometer-powervm-log-warning.pot  ceilometer-powervm.pot
ceilometer_powervm/locale/de/: ceilometer-powervm-log-error.po  ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/es/: ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/fr/: ceilometer-powervm-log-critical.po  ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/it/: ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/ja/: ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/ko/: ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/pt-BR/: ceilometer-powervm-log-critical.po  ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/ru/: ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/zh-Hans/: ceilometer-powervm-log-error.po  ceilometer-powervm-log-warning.po  ceilometer-powervm.po
ceilometer_powervm/locale/zh-Hant/: ceilometer-powervm-log-error.po  ceilometer-powervm-log-info.po  ceilometer-powervm-log-warning.po  ceilometer-powervm.po
devstack/: README.rst  local.conf.aio  local.conf.aio-ovs-ssp  local.conf.aio-sea-localdisk  local.conf.compute  local.conf.control  local.conf.example  override-defaults  ovs.aio.local.conf  plugin.sh  powervm-functions.sh  settings
doc/: requirements.txt
doc/ext/: support_matrix.py
doc/source/: conf.py  index.rst  support-matrix.ini  support-matrix.rst
doc/source/devref/: development_environment.rst  index.rst  project_structure.rst  testing.rst  usage.rst
doc/source/policies/: bugs.rst  code-reviews.rst  index.rst
doc/source/specs/: index.rst
etc/ceilometer/: pipeline.yaml
nova/virt/: __init__.py
nova/virt/powervm/: driver.py
nova/virt/powervm_ext/: driver.py
nova_powervm/: version.py
nova_powervm/cmd/: conductor.py
nova_powervm/conf/: __init__.py  powervm.py
nova_powervm/hacking/: checks.py
nova_powervm/locale/: nova-powervm-log-critical.pot  nova-powervm-log-error.pot  nova-powervm-log-info.pot  nova-powervm-log-warning.pot  nova-powervm.pot
nova_powervm/locale/de/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/es/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/fr/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/it/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/ja/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/ko/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/pt-BR/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/ru/: nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/locale/zh-Hans/: nova-powervm-log-critical.po  nova-powervm-log-error.po  nova-powervm-log-info.po  nova-powervm-log-warning.po  nova-powervm.po
nova_powervm/objects/: __init__.py  migrate_data.py
specs/: template.rst
specs/newton/: lb_and_ovs_support.rst
specs/ocata/: image_cache.rst
tools/: tox_install.sh
(+121 files in other folders)
