[metadata]
name = ceilometer-powervm
summary = PowerVM Ceilometer Inspector for OpenStack Ceilometer.
description-file = README.rst
author = IBM
author-email = thorst@us.ibm.com
home-page = https://launchpad.net/ceilometer-powervm
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
ceilometer.compute.virt =
    powervm = ceilometer_powervm.compute.virt.powervm.inspector.PowerVMInspector

[files]
packages = ceilometer_powervm

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ceilometer_powervm/locale
domain = ceilometer-powervm

[update_catalog]
domain = ceilometer-powervm
output_dir = ceilometer_powervm/locale
input_file = ceilometer_powervm/locale/ceilometer-powervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer_powervm/locale/ceilometer-powervm.pot
