[metadata]
name = nova_powervm
summary = PowerVM driver for OpenStack Nova.
description-file = README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://nova-powervm.readthedocs.io
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    nova_powervm
    nova/virt/powervm_ext

[compile_catalog]
directory = nova_powervm/locale
domain = nova-powervm

[init_catalog]
domain = nova-powervm
output_dir = nova_powervm/locale
input_file = nova_powervm/locale/nova-powervm.pot

[update_catalog]
domain = nova-powervm
output_dir = nova_powervm/locale
input_file = nova_powervm/locale/nova-powervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nova_powervm/locale/nova-powervm.pot

[entry_points]
oslo.config.opts =
    nova_powervm = nova_powervm.conf.powervm:list_opts
